--- a/.github/workflows/build_linux_x86_64.yml
+++ b/.github/workflows/build_linux_x86_64.yml
@@ -1,4 +1,4 @@
-name: Build openvb for Windows
+name: Build openvb for Linux x86_64
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
-      - name: Build openvb for Windows
+      - name: Build openvb for Linux
         run: |
-          ./build.bat
-        shell: cmd
+          ./build.sh build_native
+        shell: bash
 
       - name: Upload Binary
         uses: ncipollo/release-action@v1
