--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,14 @@
 name: openvb
-description: A open source VB interpreter written in Dart.
+description: A open source Visual Basic interpreter written in Dart.
 version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/pptos-org/openvb
 
 environment:
   sdk: ^3.4.4
 
-# Add regular dependencies here.
 dependencies:
   web: ^1.0.0
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
-  build_runner: ^2.4.12
-  build_test: ^2.2.2
-  build_web_compilers: ^4.0.11
