--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,3 +12,6 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  build_runner: ^2.4.12
+  build_test: ^2.2.2
+  build_web_compilers: ^4.0.11
