--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ dependencies:
   file_system_access_api: ^2.0.0
 
 dev_dependencies:
-  lints: ^3.0.0
+  lints: ^4.0.0
   test: ^1.24.0
   build_runner: ^2.4.12
   build_test: ^2.2.2
   build_web_compilers: ^4.0.11
+  source_map_stack_trace: ^2.1.2
